# Tbot

./: .gitignore  README.md  pyproject.toml
source/: __init__.py
src/: __init__.py  app.py  logger_handler.py  logging_config.yml
src/bot/: access_data.json  commands.py  manager.py  parameters.py  users.json
src/bot/commands/: help.py  registar.py
src/mongo_controller/: mongo_queries.py
